# vibevoice-rs

./: .gitignore  Cargo.toml  README.md  config.example.yaml
.github/workflows/: release.yml
examples/: batch_processing.rs  multi_speaker.rs  simple_tts.rs  streaming.rs  voice_cloning.rs
scripts/: convert_voice_cache.py  run_i18n_voices.sh  sse_to_wav.py
src/: acoustic_connector.rs  diffusion.rs  lib.rs  main.rs  model.rs  processor.rs  pytorch_rng.rs  semantic_tokenizer.rs  speech_connector.rs  streaming_cache.rs  test_helpers.rs  test_helpers_README.md  utils.rs  vae_decoder.rs  vae_encoder.rs  vae_layers.rs  vae_utils.rs  voice_mapper.rs
src/realtime/: binary_classifier.rs  config.rs  mod.rs
text_examples/: 1p.txt  1p_long.txt  2p_short.txt  4p_short.txt
text_examples/i18n/: de-Spk0_man.txt  de-Spk1_woman.txt  en-Carter_man.txt  en-Davis_man.txt  en-Emma_woman.txt  en-Frank_man.txt  en-Grace_woman.txt  en-Mike_man.txt  fr-Spk0_man.txt  fr-Spk1_woman.txt  in-Samuel_man.txt  it-Spk0_woman.txt  it-Spk1_man.txt  jp-Spk0_man.txt  jp-Spk1_woman.txt  kr-Spk0_woman.txt  kr-Spk1_man.txt  nl-Spk0_man.txt  nl-Spk1_woman.txt  pl-Spk0_man.txt  pl-Spk1_woman.txt  pt-Spk0_woman.txt  pt-Spk1_man.txt  sp-Spk0_woman.txt  sp-Spk1_man.txt
vibevoice/: Cargo.toml  README.md
vibevoice-cli/: Cargo.toml  README.md
vibevoice-cli/src/: main.rs
vibevoice-server/: Cargo.toml  README.md  config.example.yaml
vibevoice-server/src/: lib.rs  main.rs
vibevoice-tauri/: Cargo.toml  README.md  tauri.conf.json
vibevoice-tauri/capabilities/: default.json
vibevoice-tauri/icons/: icon.icns
vibevoice-tauri/src/: config.rs  hotkeys.rs  lib.rs  main.rs  server.rs  tray.rs
vibevoice-web/: Cargo.toml  README.md  Trunk.toml  index.html  style.css
vibevoice-web/src/: app.rs  main.rs  tauri.rs
vibevoice-web/src/api/: client.rs
vibevoice-web/src/components/: audio_history.rs  audio_player.rs  batch_processor.rs  mod.rs  modal.rs  model_selector.rs  progress.rs  server_config.rs  server_setup.rs  settings.rs  sidebar.rs  synth_button.rs  text_input.rs  text_templates.rs  toast.rs  voice_preview.rs  voice_selector.rs
vibevoice-web/src/sse/: stream.rs
vibevoice-web/src/storage/: history.rs  mod.rs  templates.rs
vibevoice/src/: audio.rs  config.rs  diffusion.rs  error.rs  facade.rs  lib.rs  model.rs  processor.rs  pytorch_rng.rs  semantic_tokenizer.rs  speech_connector.rs  streaming_cache.rs  utils.rs  vae_decoder.rs  vae_encoder.rs  vae_layers.rs  voice_converter.rs
vibevoice/src/realtime/: binary_classifier.rs  config.rs  generation.rs  mod.rs  model.rs  split_llm.rs  voice_cache.rs
voices/streaming_model/: en-Davis_man.safetensors  en-Emma_woman.safetensors  en-Frank_man.safetensors  en-Grace_woman.safetensors  en-Mike_man.safetensors  in-Samuel_man.safetensors  it-Spk0_woman.safetensors  it-Spk1_man.safetensors  kr-Spk0_woman.safetensors  nl-Spk0_man.safetensors  pl-Spk0_man.safetensors  pt-Spk0_woman.safetensors  pt-Spk1_man.safetensors
