[workspace]
resolver = "2"
members = ["vibevoice", "vibevoice-cli"]

[workspace.package]
version = "0.1.0"
edition = "2024"
license = "MIT"
repository = "https://github.com/danielclough/vibevoice-rs"
readme = "README.md"

[workspace.dependencies]
# Custom candle fork - shared across workspace
candle-core = { git = "https://github.com/danielclough/candle", branch = "feat/forward_from_embeds_no_norm" }
candle-nn = { git = "https://github.com/danielclough/candle", branch = "feat/forward_from_embeds_no_norm" }
candle-transformers = { git = "https://github.com/danielclough/candle", branch = "feat/forward_from_embeds_no_norm" }
candle-hf-hub = "0.3.2"

# Shared dependencies
anyhow = "1.0"
thiserror = "2.0"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokenizers = "0.19"
hound = "3.5"
clap = { version = "4.5", features = ["derive"] }

[profile.release]
opt-level = 3
lto = "thin"
codegen-units = 1

[profile.dev]
opt-level = 1
